# RelayContract

./: app.js  app.ts  package-lock.json  package.json
EthereumBurn/: README.md  hardhat.config.js  package-lock.json  package.json
EthereumBurn/contracts/: EfiToken.sol  EnjToken.sol  EthereumBurn.sol
EthereumBurn/scripts/: deploy.js
approver/: app.js  package-lock.json  package.json
ethereum-burn/: README.md
ethereum-burn/contracts/: EthereumBurn.sol
relaychain/: Cargo.toml
relaychain/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs
relayer/: app.js  package-lock.json  package.json
relayer/src/: index.js
src/: index.js
